fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,7 @@ nav {
   align-items: end;
   gap: 0.6rem;
   order: 2;
+  margin: 0.5rem 0 0.5rem 0;
 }
 
 .logoName {
